--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "pdfkit": "^0.17.1",
     "uuid": "^11.1.0",
     "validator": "^13.15.15"
   },
