--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.4",
     "pdfkit": "^0.17.1",
+    "resend": "^4.6.0",
     "uuid": "^11.1.0",
     "validator": "^13.15.15"
   },
